logs/dag_id=dag_with_postgres_operator_v02/run_id=scheduled__2023-10-17T00:00:00+00:00/task_id=delete_data_from_table/attempt=3.log
[2023-10-18T00:04:27.794+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.delete_data_from_table scheduled__2023-10-17T00:00:00+00:00 [queued]>
[2023-10-18T00:04:27.799+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.delete_data_from_table scheduled__2023-10-17T00:00:00+00:00 [queued]>
[2023-10-18T00:04:27.800+0000] {taskinstance.py:1361} INFO - Starting attempt 3 of 6
[2023-10-18T00:04:27.807+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): delete_data_from_table> on 2023-10-17 00:00:00+00:00
[2023-10-18T00:04:27.810+0000] {standard_task_runner.py:57} INFO - Started process 1058 to run task
[2023-10-18T00:04:27.813+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v02', 'delete_data_from_table', 'scheduled__2023-10-17T00:00:00+00:00', '--job-id', '2011', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgre_operator.py', '--cfg-path', '/tmp/tmp_actd9g5']
[2023-10-18T00:04:27.815+0000] {standard_task_runner.py:85} INFO - Job 2011: Subtask delete_data_from_table
[2023-10-18T00:04:27.842+0000] {task_command.py:415} INFO - Running <TaskInstance: dag_with_postgres_operator_v02.delete_data_from_table scheduled__2023-10-17T00:00:00+00:00 [running]> on host d98c068596b4
[2023-10-18T00:04:27.883+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='andy_hsu' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v02' AIRFLOW_CTX_TASK_ID='delete_data_from_table' AIRFLOW_CTX_EXECUTION_DATE='2023-10-17T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-10-17T00:00:00+00:00'
[2023-10-18T00:04:27.884+0000] {sql.py:274} INFO - Executing: 
            delete from dag_runs where dt = '2023-10-17' and dag_id values = 'dag_with_postgres_operator_v02'
            
[2023-10-18T00:04:27.890+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-10-18T00:04:27.897+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-10-18T00:04:27.904+0000] {sql.py:418} INFO - Running statement: 
            delete from dag_runs where dt = '2023-10-17' and dag_id values = 'dag_with_postgres_operator_v02'
            , parameters: None
[2023-10-18T00:04:27.907+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "values"
LINE 2: ... from dag_runs where dt = '2023-10-17' and dag_id values = '...
                                                             ^

[2023-10-18T00:04:27.912+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v02, task_id=delete_data_from_table, execution_date=20231017T000000, start_date=20231018T000427, end_date=20231018T000427
[2023-10-18T00:04:27.918+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 2011 for task delete_data_from_table (syntax error at or near "values"
LINE 2: ... from dag_runs where dt = '2023-10-17' and dag_id values = '...
                                                             ^
; 1058)
[2023-10-18T00:04:27.946+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-10-18T00:04:27.958+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
